<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_morning"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/button_spotlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/spotlight"
            android:padding="12dp"
            android:src="@drawable/ic_spotlight"
            app:tint="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <!-- The LinearLayout parent is responsible for centering the HorizontalScrollView -->
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scrollbars="none"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/appButtons"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <tk.therealsuji.vtopchennai.widgets.InfoCard
                    android:id="@+id/card_pending_classes"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:baselineAligned="false"
                    app:key="@string/pending_classes" />

                <tk.therealsuji.vtopchennai.widgets.InfoCard
                    android:id="@+id/card_attendance"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    app:key="@string/overall_attendance" />

                <tk.therealsuji.vtopchennai.widgets.InfoCard
                    android:id="@+id/card_cgpa"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    app:key="@string/cgpa" />

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats"
        app:tabBackground="@drawable/background_tab_item"
        app:tabGravity="center"
        app:tabIndicator="@drawable/background_tab_item"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@color/colorBlue04"
        app:tabIndicatorGravity="stretch"
        app:tabMaxWidth="50dp"
        app:tabMode="scrollable"
        app:tabTextColor="@color/colorPrimary"
        app:tabUnboundedRipple="true" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/timetable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/days" />

</androidx.constraintlayout.widget.ConstraintLayout>